--- a/코드_회사 업무 체크리스트 엑셀버전.html
+++ b/코드_회사 업무 체크리스트 엑셀버전.html
@@ -936,3 +936,9 @@ export default function App() {
     </div>
   );
 }
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
+    </script>
+</body>
+</html>
